--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>SEDNA</title>
     <meta name="description" content="SEDNAのHPです">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
   <body>
@@ -70,18 +71,20 @@
 
     <section class="featuers">
       <div class="container">
-        <div class="feature">
-          <h1>EASILY CUSTOMISED</h1>
-          <p>Easily customise Sedna to suit your start up, portfolio or product. Take advantage of the layered Sketch file and bring your product to life.</p>
-        </div>
-        <div class="feature">
-          <h1>MODERN DESIGN</h1>
-          <p>Designed with modern trends and techniques in mind, Sedna will help your product stand out in an already saturated market.</p>
-        </div>
-        <div class="feature">
-          <h1>RESPONSIVE DEVELOPMENT</h1>
-          <p>Built using the latest web technologies like html5, css3, and jQuery, rest assured Sedna will look smashing on every device under the sun.
-          </p>
+        <div class="featurespart">
+          <div class="feature">
+            <h1>EASILY CUSTOMISED</h1>
+            <p>Easily customise Sedna to suit your start up, portfolio or product. Take advantage of the layered Sketch file and bring your product to life.</p>
+          </div>
+          <div class="feature">
+            <h1>MODERN DESIGN</h1>
+            <p>Designed with modern trends and techniques in mind, Sedna will help your product stand out in an already saturated market.</p>
+          </div>
+          <div class="feature">
+            <h1>RESPONSIVE DEVELOPMENT</h1>
+            <p>Built using the latest web technologies like html5, css3, and jQuery, rest assured Sedna will look smashing on every device under the sun.
+            </p>
+          </div>
         </div>
         </div>
     </section>
@@ -200,7 +203,9 @@
         <div class="form">
           <input class="formtype " type="text" value="" class placeholder="Enter your mail">
           <input class="formtype" type="text" value="" placeholder="Enter your password">
-          <a class="box"href="#">SIGN UP FOR FREE</a>
+          <div class="box-free">
+            <a class="box"href="#">SIGN UP FOR FREE</a>
+          </div>
         </div>
       </div>
     </section>
